@@ -1,9 +1,9 @@
 package com.salary.backend_salary.service.document;
 
 import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -21,6 +21,7 @@ import com.salary.backend_salary.repository.document.DocumentRepository;
 import com.salary.backend_salary.repository.employee.EmployeeRepository;
 import com.salary.backend_salary.repository.user.UserRepository;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -33,15 +34,19 @@ public class DocumentService {
 
     @Transactional
     public void submitDocument(Long employeeId, DocumentRequest request) {
-        Employee employee = employeeRepository.findById(employeeId)
-                .orElseThrow(() -> new RuntimeException("Employee not found"));
-
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-        AppUser currentUser = userRepository.findByUsername(auth.getName())
-                .orElseThrow(() -> new RuntimeException("AppUser not found"));
+        if (auth == null || auth.getName() == null) {
+            throw new SecurityException("User is not authenticated");
+        }
 
-        DocumentSubmission doc = new DocumentSubmission();   
-        doc.setEmployee(employee); 
+        Employee employee = employeeRepository.findById(employeeId)
+                .orElseThrow(() -> new EntityNotFoundException("Employee not found with ID: " + employeeId));
+
+        AppUser currentUser = userRepository.findByUsername(auth.getName())
+                .orElseThrow(() -> new EntityNotFoundException("AppUser not found with username: " + auth.getName()));
+
+        DocumentSubmission doc = new DocumentSubmission();
+        doc.setEmployee(employee);
         doc.setFilename(request.getFilename());
         doc.setDocumentType(request.getType());
         doc.setDocumentContent(request.getContent());
@@ -51,31 +56,17 @@ public class DocumentService {
         documentRepository.save(doc);
     }
 
-  @Transactional(readOnly = true)  
-  public List<DocumentResponse> listDocuments(Long employeeId) {
+    @Transactional(readOnly = true)  
+    public List<DocumentResponse> listDocuments(Long employeeId) {
         List<DocumentSubmission> docs = documentRepository.findByEmployeeIdOrderByCreatedAtDesc(employeeId);
         
-        return docs.stream().map(doc -> {
-            DocumentResponse res = new DocumentResponse();
-            res.setId(doc.getId());
-            res.setFilename(doc.getFilename());
-            res.setDocumentType(doc.getDocumentType());
-            res.setDocumentContent(doc.getDocumentContent());
-            res.setCreatedAt(doc.getCreatedAt());
-            
-            if (doc.getCreatedBy() != null) {
-                res.setCreatedBy(doc.getCreatedBy().getUsername());
-            } else {
-                res.setCreatedBy("SYSTEM");
-            }
-            
-            return res;
-        }).collect(Collectors.toList());
+        return docs.stream().map(this::mapToResponse).toList();
     }
     
     @Transactional(readOnly = true)
     public DocumentSubmission getDocumentById(Long docId) {
-        return documentRepository.findById(docId).orElseThrow(() -> new RuntimeException("No Documents found"));
+        return documentRepository.findById(docId)
+                .orElseThrow(() -> new EntityNotFoundException("Document not found with ID: " + docId));
     }
 
     @Transactional(readOnly = true)
@@ -83,7 +74,7 @@ public class DocumentService {
         List<DocumentSubmission> docs = documentRepository.findByEmployeeIdOrderByCreatedAtDesc(employeeId);
         
         if (docs.isEmpty()) {
-            throw new RuntimeException("No documents found");
+            throw new EntityNotFoundException("No documents found for employee ID: " + employeeId);
         }
 
         try (ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -92,16 +83,34 @@ public class DocumentService {
             for (DocumentSubmission doc : docs) {
                 ZipEntry entry = new ZipEntry(doc.getFilename());
                 zos.putNextEntry(entry);
-                zos.write(doc.getDocumentContent().getBytes());
+                if (doc.getDocumentContent() != null) {
+                    zos.write(doc.getDocumentContent().getBytes());
+                }
                 zos.closeEntry();
             }
 
             zos.finish();
             return baos.toByteArray();
 
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to zip documents", e);
+        } catch (IOException e) {
+            throw new IllegalStateException("Failed to generate zip file for documents", e);
         }
     }
-}
 
+    private DocumentResponse mapToResponse(DocumentSubmission doc) {
+        DocumentResponse res = new DocumentResponse();
+        res.setId(doc.getId());
+        res.setFilename(doc.getFilename());
+        res.setDocumentType(doc.getDocumentType());
+        res.setDocumentContent(doc.getDocumentContent());
+        res.setCreatedAt(doc.getCreatedAt());
+        
+        if (doc.getCreatedBy() != null) {
+            res.setCreatedBy(doc.getCreatedBy().getUsername());
+        } else {
+            res.setCreatedBy("SYSTEM");
+        }
+        
+        return res;
+    }
+}
